# pmVPN

./: .gitignore  README.md
blocktalk/: README.md  index.html  package.json
blocktalk/src/: app.ts  main.ts  message.ts  store.ts
pmvpn/: LICENSE-SERVER-MIT  README.md
pmvpn/client/: index.html  package.json  vite.config.ts
pmvpn/client/src/: app.ts  auth.ts  bootstrap.ts  files.ts  hostkeys.ts  main.ts  share.ts  style.ts  terminal.ts
pmvpn/client/src-tauri/: Cargo.toml  tauri.conf.json
pmvpn/client/src-tauri/icons/: icon.icns
pmvpn/client/src-tauri/src/: lib.rs  main.rs
pmvpn/docs/: ANDROID.md  BOOTSTRAP.md  CLIENT.md  DEPLOYMENT.md  DEVELOPMENT.md  PROTOCOL.md  USAGE.md  metamaskbestpractice.md
pmvpn/server/: .env.example  package.json  tsconfig.json
pmvpn/server/src/: index.ts  shared.ts
pmvpn/server/src/api/: challenge.ts
pmvpn/shared/: package.json
pmvpn/shared/src/: constants.ts  types.ts
pmvpn_v2.0.4.8_full_stack_release/: install.sh
pmvpn_v2.0.4.8_full_stack_release/docs/: README.md
pmvpn_v2.0.4.8_full_stack_release/extensions/don/: README.md
pmvpn_v2.0.4.8_full_stack_release/extensions/hydra/: README.md
pmvpn_v2.0.4.8_full_stack_release/extensions/podman/: README.md
rep_bonafide_module/: README.md  install.sh
rep_bonafide_module/agents/: genius.js
rep_bonafide_module/contracts/: BONA.sol  bonafide.sol
rep_bonafide_module/dispute/: perfidus.js
rep_bonafide_module/engine/: auctoritas.js  dignitas.js
rep_bonafide_module/governance/: comitia.js  senatus.js
rep_bonafide_module/registry/: tabularium.js
(+27 files in other folders)
